logs/neg/t8177a-neg.log
t8177a.scala:5: error: type mismatch;
 found   : A
 required: A
             : A { type Result = String} = x
                                           ^
one error found
